# Distribution-Core-Android

./: README.md  Test Results - BaseViewModelUnitTest.html  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
benchmark/: build.gradle.kts
benchmark/src/main/java/com/example/benchmark/: ExampleStartupBenchmark.kt
camera/: CLAUDE.md  build.gradle.kts  gradle.properties  settings.gradle.kts
camera/.claude/agent-memory/camera-ndk-capture/: MEMORY.md  project_pipeline_shape.md
camera/.claude/agents/: camera-ndk-capture.md
camera/src/androidTest/java/com/chiistudio/camerandk/: ExampleInstrumentedTest.kt
camera/src/main/cpp/: CMakeLists.txt  camera_native.cpp
camera/src/main/cpp/camera/: camera_controller.cpp  camera_controller.h
camera/src/main/cpp/gl/: egl_renderer.cpp  egl_renderer.h  gl_unit.cpp  gl_unit.h  texture_loader.cpp  texture_loader.h  video_gl.cpp  video_gl.h
camera/src/main/cpp/utils/: Vec3.h  log-android.h  single_thread_executor.h
camera/src/main/cpp/video/: video_encoder.cpp  video_encoder.h
camera/src/main/java/com/chiistudio/camerandk/jni/: JNILibraryLoader.kt  NativeRenderer.kt
camera/src/main/java/com/chiistudio/camerandk/model/: AdjustColorType.kt  AdjustType.kt  CameraBuilder.kt  CameraLens.kt  CameraMode.kt  ResolutionPreset.kt  Vec3.kt  VideoConfigure.kt
camera/src/main/java/com/chiistudio/camerandk/preview/: GLPreview.kt  IAdjustVideo.kt
camera/src/main/java/com/chiistudio/camerandk/utils/: AssetReader.kt  BitmapExtention.kt  CurveFilter.kt  CurveTone.java  FileUtils.kt  ShaderBuilder.kt
camera/src/test/java/com/chiistudio/camerandk/: ExampleUnitTest.kt
core/: build.gradle.kts  gradle.properties
core/src/androidTest/java/com/chiistudio/core/: ExampleInstrumentedTest.kt
core/src/main/java/com/chiistudio/core/basemvvm/: BaseAdapter.kt  BaseViewModel.kt  ReentrantMutex.kt
core/src/test/java/com/chiistudio/core/: BaseViewModelUnitTest.kt  ExampleUnitTest.kt  MainDispatcherRule.kt  ReentrantMutexUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
network/: build.gradle.kts
network/src/androidTest/java/com/chiistudio/network/: ExampleInstrumentedTest.kt
network/src/main/java/com/chiistudio/network/: InitNetwork.kt
network/src/main/java/com/chiistudio/network/base/: BaseClient.kt  IClient.kt  IRetryToken.kt  ITokenManager.kt  RetryTokenManager.kt
network/src/main/java/com/chiistudio/network/di/: WeatherServiceModule.kt
network/src/main/java/com/chiistudio/network/service/weather/: BearWeatherAuth.kt  BearWeatherClient.kt  BearWeatherHeader.kt  BearWeatherService.kt  WeatherToken.kt
network/src/test/java/com/chiistudio/network/: ExampleUnitTest.kt  RetryTokenUnitTest.kt
plugin/: build.gradle.kts  settings.gradle.kts
plugin/src/main/java/com/chiistudio/plugin/: PublishConfigPlugin.kt
